--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gwa",
+  "name": "gwa_project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,15 +9,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
     "bootstrap": "^4.6.1",
     "country-list": "^2.3.0",
     "i18n-iso-countries": "^7.11.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
